TaskDao updated and base data added
Signed-off-by: Maikol Guzman Alan <mguzmana@akamai.com>